<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMem"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/tvVisor"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:fontFamily="@font/sfuidisplayregular"
        android:gravity="right|bottom"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:text="@string/tc0"
        android:textColor="@color/white"
        android:textSize="65sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="2dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btAC"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_function"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcAC"
            android:textAllCaps="false"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btMaisMenos"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"

            android:background="@drawable/button_function"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcMaisMenos"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btPorcentagem"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"

            android:background="@drawable/button_function"

            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcPercentual"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btDivisao"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"

            android:background="@drawable/button_calculator"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcDivisao"

            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="2dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc7"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc8"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt9"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc9"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btMultiplicacao"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_calculator"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcMultiplicacao"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="2dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc4"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc5"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc6"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btMenos"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_calculator"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcMenos"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="2dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc2"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tc3"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btMais"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:background="@drawable/button_calculator"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcMais"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="2dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bt0"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:layout_weight="7"
            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:gravity="left|center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/tc0"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btVrigula"

            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"

            android:background="@drawable/button_tecla"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcVirgula"

            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/btCalcular"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"

            android:background="@drawable/button_calculator"
            android:fontFamily="@font/sfuidisplayregular"
            android:text="@string/tcIgual"

            android:textColor="@color/white"
            android:textSize="34sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>


</LinearLayout>